tests/fixtures/invalid/chr_float.py
# Cannot call chr() with Float
x = chr(1.0)
